force-app/main/default/objects/Project_Framework__c/Project_Framework__c.object-meta.xml
<CustomObject>
    <label>Project Framework</label>
    <nameField>
        <label>Project Framework Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Frameworks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>