force-app/main/default/objects/Project_Framework__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Project Description, this is derived from the project framework chosen to run the project off</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>