force-app/main/default/objects/Project_Framework__c/fields/Framework__c.field-meta.xml
<CustomField>
    <fullName>Framework__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relates the project to the chosen framework</description>
    <label>Framework</label>
    <referenceTo>Framework__c</referenceTo>
    <relationshipLabel>Project Frameworks</relationshipLabel>
    <relationshipName>Project_Frameworks</relationshipName>
    <type>Lookup</type>
</CustomField>