force-app/main/default/objects/Project_Framework__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <description>URL link to the Standards Body Organization</description>
    <label>URL</label>
    <type>Url</type>
</CustomField>