force-app/main/default/objects/Project_Framework__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>The version of the Framework the project is running off</description>
    <label>Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>